tests/ui/parser/using_file_level_library_wildcard.sol
library L {}

using L for *; //~ ERROR: the type has to be specified explicitly at file level
